--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 
         <p id="pDivDollar">&dollar;29 per month</p>
       
-        <p>Full access for less than &dollar;1 a day</p> 
+        <p id="pDivTwo">Full access for less than &dollar;1 a day</p> 
       
         <button>Sign Up</button>
       </div>
-      <div id="divGridThree">  Why Us
+      <div id="divGridThree">
+        <p id="pDivThree">Why Us
 
         Tutorials by industry experts
         Peer &amp; expert code review
@@ -40,7 +41,8 @@
         Access to our GitHub repos
         Community forum
         Flashcard decks
-        New videos every week</div>
+        New videos every week</p>
+      </div>
     </div>
 
 </main>
