--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <p id="pDivOne">30-day, hassle-free money back guarantee</p>
       
-       <p>Gain access to our full library of tutorials along with expert code reviews. 
+       <p id="pDivOneTwo">Gain access to our full library of tutorials along with expert code reviews. 
         Perfect for any developers who are serious about honing their skills.</p> </div>
       <div id="divGridTwo"> <h2 class="h2DivTwoThree">Monthly Subscription</h2>
 
@@ -35,12 +35,12 @@
       <div id="divGridThree">
         <p id="pDivThree">Why Us
 
-        Tutorials by industry experts
-        Peer &amp; expert code review
-        Coding exercises
-        Access to our GitHub repos
-        Community forum
-        Flashcard decks
+        Tutorials by industry experts <br>
+        Peer &amp; expert code review<br>
+        Coding exercises<br>
+        Access to our GitHub repos<br>
+        Community forum<br>
+        Flashcard decks<br>
         New videos every week</p>
       </div>
     </div>
