--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </main>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://github.com/AndersRKvamme/Single-Price-Grid" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">ARK</a>.
     </p>
   </footer>
