--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div id="divGridTwo" class="divCard"> 
         <h2 id="h2DivTwoThree">Monthly Subscription</h2>
 
-        <p id="pDivDollar"><span id="dollar">&dollar;29</span> per month</p>
+        <p id="pDivDollar">&dollar;29<span> per month</span></p>
       
         <p id="pDivTwo">Full access for less than &dollar;1 a day</p> 
       
